--- a/site/css/site.less
+++ b/site/css/site.less
@@ -79,7 +79,9 @@ video {
 	background: url("/images/choose_companion.jpg");
 	background-size: cover;
 }
-
+.topvid {
+	margin-bottom: 16px;
+}
 .perthumb {
 	text-align: center;	
 }
