--- a/site/css/site.less
+++ b/site/css/site.less
@@ -51,6 +51,17 @@ video {
 	}
 
 }
+.smallo {
+	font-size: 0.7em;
+	line-height: 0.3;
+	display: block;
+	padding-bottom: 3px;
+}
+.biggo {
+	display: block;
+	margin-top: -0.7em;
+	padding-top: 6px;
+}
 .perthumb video, .topvid video {
 	margin: auto;
 }
